@@ -9,6 +9,7 @@ Version 0.4f
 ------------
 * Fixed some bugs
 * Expanded on the "wait" menu (hotkey Z) to allow for better control. Sleep still does the regular 8 hours.
+* Added a shortcut to Party->Member. Just click the portrait of whoever you want to look over.
 
 --------------------------------------------
              PREVIOUS VERSIONS
